# WardenDaemon

./: .clang-format  CMakeLists.txt
Source/: main.cpp
Source/Core/: PackageManager.cpp  PackageManager.h  PackageObserver.cpp  PackageObserver.h
Source/Utils/: DBusServer.cpp  DBusServer.h  ProcessObserver.cpp  ProcessObserver.h  Utils.cpp  Utils.h  config.h
